# M1-CHPS-Debogage-Profiling

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
TD3-20260225/: rapport_TD3.tex
TD3-20260225/libmcblas002/: CMakeLists.txt  README.org
TD3-20260225/libmcblas002/mcblas001/: CMakeLists.txt  mcblas1.hpp
TD3-20260225/libmcblas002/mcblas002/: CMakeLists.txt  mcblas3.hpp
TD3-20260225/libmcblas002/tests/: tst002.cpp
TD3-20260225/libmcblas002/tests/runs/: CMakeLists.txt
TD3-20260225/libmcblas002/tests/runs/data/: CMakeLists.txt
TD3-Optimisation-Boucles/: README.md
TD3-Optimisation-Boucles/libmcblas002/mcblas001/: mcblas3.cpp
TD3-Optimisation-Boucles/libmcblas002/mcblas003/: mcblas0.hpp  mcblas1.cpp  mcblas3.cpp
TD3-Optimisation-Boucles/libmcblas002/tests/: tst003.cpp
TD3-Optimisation-Boucles/libmcblas002/tests/runs/graphs/: CMakeLists.txt  grph.mk
TD4-BIS-Profiling-Vectorisation/: README.md
TD4-BIS-Profiling-Vectorisation/libmcblas004/: CMakeLists.txt
TD4-BIS-Profiling-Vectorisation/libmcblas004/mcblas004/: mcblas0.cpp  mcblas3.cpp
TD4-BIS-Profiling-Vectorisation/libmcblas004/mcblas005/: CMakeLists.txt  mcblas3.cpp
TD4-BIS-Profiling-Vectorisation/libmcblas004/mcblas006/: CMakeLists.txt  mcblas3.cpp
TD4-BIS-Profiling-Vectorisation/libmcblas004/mcblas007/: CMakeLists.txt
TD4-BIS-Profiling-Vectorisation/libmcblas004/mcblas008/: CMakeLists.txt  mcblas0.hpp  mcblas3.hpp
TD4-BIS-Profiling-Vectorisation/libmcblas004/mcblas009/: mcblas3.cpp
TD4-BIS-Profiling-Vectorisation/libmcblas004/mcblas010/: CMakeLists.txt  mcblas3.cpp  mcblas3_original.cpp
TD4-BIS-Profiling-Vectorisation/libmcblas004/mcblas011/: CMakeLists.txt  mcblas3.cpp
TD4-BIS-Profiling-Vectorisation/libmcblas004/tests/: CMakeLists.txt  tst.hpp  tst005.cpp
TD4-BIS-Profiling-Vectorisation/libmcblas004/tests/runs/: CMakeLists.txt
TD4-BIS-Profiling-Vectorisation/results/: dashboard.html
TD4-BIS-Profiling-Vectorisation/tools/: generate_dashboard.py  plot_results  plot_results.cpp
TD4-Profiling-Vectorisation/: README.md
libmcblas004_TD4_complet/: CMakeLists.txt  README.org
libmcblas004_TD4_complet/mcblas002/: mcblas3.cpp
libmcblas004_TD4_complet/mcblas003/: CMakeLists.txt  mcblas3.cpp
libmcblas004_TD4_complet/mcblas004/: CMakeLists.txt
libmcblas004_TD4_complet/mcblas006/: CMakeLists.txt  mcblas0.cpp
libmcblas004_TD4_complet/mcblas007/: mcblas3.cpp
libmcblas004_TD4_complet/mcblas008/: mcblas3.cpp
libmcblas004_TD4_complet/mcblas009/: CMakeLists.txt
libmcblas004_TD4_complet/mcblas010/: CMakeLists.txt  mcblas3.cpp
libmcblas004_TD4_complet/tests/: tst001.cpp
libmcblas004_TD4_complet/tests/runs/: CMakeLists.txt
libmcblas004_TD4_complet/tests/runs/graphs/: grph.mk  pltall.plt
